--- a/social link profile.html
+++ b/social link profile.html
@@ -4,6 +4,7 @@
 <head>
     <title>Profile</title>
     <link rel="stylesheet" href="./social link profile.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
