--- a/social link profile.html
+++ b/social link profile.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="box">
-     <center><img src="./ghibli.png" alt="Ghibli" width="200" height="200">
+     <center><img src="C:\Users\sur15\OneDrive\Desktop\HTML\ghibli.png" alt="Ghibli" width="200" height="200">
         <p id="name"><b>Vijay Kumar</b></p>
         <p id="place"><b>London, United Kingdom</b></p>
         <p>"Front-end Developer and avid reader".</p>
